+ Improved: Unclaim during upkeep task collection