@@ -212,6 +212,7 @@ upkeep:
   nopay_time: 2d
   # Remind land members, which can deposit money into their lands, about upcoming upkeep payments until they have enough money to pay it.
   # This helps your players lands keeping track of it and not loosing claims or their membership in the nation.
+  # This will send a reminder ever configured period while in "insufficient-altert_time" from above.
   upkeep-reminder_time: 1h
 
 
@@ -530,6 +531,9 @@ land:
     # If the value is lower than a land's upkeep, it will automatically be adjusted to the land's upkeep.
     # Use 0 to disable this option completely.
     max-balance: 0
+    # Should money be taken from the players personal balance, if they for example try to claim, but the land bank doesn't have enough money?
+    # If disabled and they don't have enough money in the land bank during upkeep collection, they won't be able to pay the upkeep.
+    fallback-personal: true
 
 
 # Each chunk represents an 16x16 blocks area.
@@ -957,7 +961,7 @@ database:
     enabled_6: false
     address_3: "redis://127.0.0.1"
     port_3: 6379
-    # Database index. No other plugin should use the same index. It must be unique number.
+    # Database index. No other plugin should use the same index.
     database-index: 1
     username_3: "default"
     password_3: "password"
