@@ -1,1 +1,4 @@
-+ Improved: Unclaim during upkeep task collection
++ Added: Option to disable personal fallback:
+    # Should money be taken from the players personal balance, if they for example try to claim, but the land bank doesn't have enough money?
+    # If disabled and they don't have enough money in the land bank during upkeep collection, they won't be able to pay the upkeep.
+    fallback-personal: true
